Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignObjectBoolObjField.quorum
class Main
    Boolean b
    Object o        
    action Main
        b:SetValue(true)
        o = cast(Object, b)
        if o:Equals(b)
            output "passed"
        end
    end
end
