Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumberBoolObjField.quorum
class main
    Boolean b
    number num
    action Main
        b:SetValue(true)
        num = cast(number, b)
    end
end